Use Math.clamp